# ssp-2025

./: benchmark_APS.ipynb  checking_results.ipynb  compute_APS.ipynb  demo_global_mad_tests.ipynb  demo_mc_envelope_tests.ipynb  demo_method_DT_method.ipynb  demo_method_delaunay_triangulation.ipynb  demo_method_empty_space.ipynb  demo_method_hard_threshold.ipynb  demo_method_zero_class.ipynb  demo_rank_envelope_tests.ipynb  example_listening_test.ipynb  example_spectrograms.ipynb  figure_2_a_accumulated_persistence.ipynb  figure_3_e_noise_spectrum.ipynb  figure_3_spectrograms.ipynb  figure_4_results_power_of_tests.ipynb  genindex.html  index.html  objects.inv  ppp_APF_simulations_N_256_Nsim_199.mcsim  prueba.py  publish_results.py  pyproject.toml  readme.html  results_b1.html  results_b2.html  results_b3.html  results_b4.html  results_b5.html  script_benchmark_babble.py  search.html  searchindex.js  utilstf.py  valgrind_output.txt
_sources/: results_b1.md.txt  results_b2.md.txt  results_b4.md.txt
results/: index.md  results_b3.md  results_b5.md
results/b1/: plot_LinearChirp.html  results_LinearChirp.csv
results/b2/: plot_6_female.html  plot_6_male.html  plot_cello.html  plot_trumpet.html  results.csv  results_6_female.csv  results_6_male.csv  results_cello.csv  results_trumpet.csv
results/b3/: plot_6_female.html  results.csv  results_6_female.csv
results/b4/: plot_LinearChirp.html  results_LinearChirp.csv
results/b5/: plot_LinearChirp.html  results_LinearChirp.csv
src/aps_metric/: perf_metrics.py
src/aps_metric/peass/: APS_wrapper.m  APS_wrapper_8.m  adapt.mex  adapt_m.mex  haircell.mex  juan_2.m  toeplitzC.mex
src/aps_metric/peass/gammatone/: Gfb_Analyzer_fprocess.mex
src/methods/: method_delaunay_triangulation.py  method_garrote_threshold.py  method_hard_threshold.py
src/stft_wrap/: stft.cpp  stft_new.cpp  stft_wrapper.py
src/utilities/: scale_functions.py  spatstats_utils.py  utils.py  utilstf.py
src/utilities/simulations/: ppp_simulations_N_128_Nsim_2499.mcsim
