[tool.poetry]
package-mode = false
description = ""
authors = ["Juan M. Miramont <jmiramontt@univ-lille.fr>"]
readme = "README.md"
packages = [{include = "src"}]

# Add your own dependencies here using "poetry add [dependency_name]"
[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PyYAML = "^6.0"
pesq = "^0.0.4"
pystoi = "^0.4.1"
oct2py = "^5.6.0"
spatstat-interface = "^1.0.1"
mcsm-benchs = "^0.1.1"
librosa = "^0.10.2.post1"
gudhi = "^3.10.1"
# matlabengine = "9.13.6" # Check this is correct for your Matlab installation.
numba = "^0.61.0"
nbformat = "^5.9.2"

# Install Docs dependencies "poetry install --with rtools"
[tool.poetry.group.rtools]
optional = true

[tool.poetry.group.rtools.dependencies]
rpy2 = "3.5.2"

# Install Docs dependencies "poetry install --with docs"
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = {version = ">=6,<8"}
sphinx-rtd-theme = {version = "^1.0.0"}
nbsphinx = { version = "^0.9.2"}
sphinxcontrib-bibtex = { version = "^2.5.0"}
myst-parser = { version = "^2.0.0"}
sphinx-copybutton = { version = "^0.5.2"}
sphinx-sizzle-theme = "^0.1.3"
sphinx-material = "^0.0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
